# omega

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/runner-image/: Dockerfile
.github/workflows/: build-runner-image.yml  ci.yml
abi/: PLACEHOLDER
cmake/: OmegaConfig.cmake.in  omega.pc.in  omegaConfig.cmake.in
cmake/smoke_test/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  STATUS.md  branching.md  release-checklist.md
docs/archive/: README.md  STATUS.md
docs/design/: 01-timing-model.md  02-thread-model.md  03-memory-storage.md  04-c-api-design.md  05-pattern-state-machine.md  06-session-container.md  07-extensions.md  08-testing-strategy.md  09-prior-art.md  10-event-source-abstraction.md  11-orchestration-layer.md  12-library-foundation.md  13-time-signature.md  14-markers-regions-anchors.md
docs/diagrams/: architecture.md  class_diagram.md  perf_state_machine.md  process_loop.md
docs/ideas/: kcs-track-mode.md  library-improvements-from-tapedeck.md  omega-api-ai-control.md  omega-plugin-host.md  omega-transforms-midi-editing-library.md  omegaaudio-recording-editing-playback.md  omegakit-developer-harness.md  omegamix-mixing-console.md
docs/migration/: v0-to-v1.md
examples/: .clang-tidy  CMakeLists.txt
examples/tapedeck/: CMakeLists.txt  main.cpp
examples/tapedeck-2/: CMakeLists.txt  main.cpp
examples/tapedeck-3/: CMakeLists.txt  main.cpp
include/omega/: anchor_point.h  clock.h  commands.h  control_sink.h  engine.h  event_anchor_table.h  event_input.h  event_source.h  export.h  input_bus.h  marker_list.h  midi_io.h  modulation_bus.h  omega.h  pattern.h  pattern_library.h  perf_context.h  perf_slot.h  process_context.h  recorder.h  region_list.h  session.h  sink.h  smf.h  smpte_converter.h  snap.h  song_arrangement.h  tempo_map.h  time_signature_map.h  timeline.h  timer.h  track.h  transform_source.h  types.h
include/omega/detail/: spsc_queue.h
include/omega/test/: capturing_sink.h  mock_clock.h  mock_event_input.h  mock_event_source.h
scripts/: local-ci.sh
src/: anchor_point.cpp  clock.cpp  control_sink.cpp  engine.cpp  event_anchor_table.cpp  libremidi_input.cpp  libremidi_sink.cpp  marker_list.cpp  modulation_bus.cpp  omega_c.cpp  pattern_library.cpp  performance_source.cpp  recorder.cpp  region_list.cpp  session.cpp  sink.cpp  smf_export.cpp  smf_import.cpp  smpte_converter.cpp  snap.cpp  song_arrangement_source.cpp  tempo_map.cpp  time_signature_map.cpp  timeline.cpp  timer.cpp  transform_source.cpp  types.cpp
tests/: CMakeLists.txt  placeholder.cpp
tests/benchmarks/: CMakeLists.txt  bench_command_enqueue.cpp  bench_dispatch_1k.cpp  bench_placeholder.cpp  bench_process_cycle.cpp  bench_tempo_lookup.cpp
tests/integration/: test_c_api_callbacks.cpp  test_c_api_for_each.cpp  test_c_api_markers.cpp  test_c_api_mute_solo.cpp  test_c_api_pattern_library.cpp  test_c_api_patterns.cpp  test_c_api_playback.cpp  test_c_api_query.cpp  test_c_api_smf.cpp  test_c_api_tempo.cpp  test_c_api_timesig.cpp  test_c_api_tracks.cpp  test_c_api_utils.cpp
tests/unit/: test_anchor_point.cpp  test_clock.cpp  test_commands.cpp  test_control_sink.cpp  test_convert_tracks.cpp  test_custom_source.cpp  test_engine.cpp  test_event_anchor_table.cpp  test_event_callback.cpp  test_event_input.cpp  test_loop.cpp  test_marker_list.cpp  test_midi_io.cpp  test_modulation_bus.cpp  test_mute_solo.cpp  test_pattern_library.cpp  test_perf_context.cpp  test_performance_source.cpp  test_position_snapshot.cpp  test_query_boundary.cpp  test_recorder.cpp  test_region_list.cpp  test_replace_event.cpp  test_session.cpp  test_sink.cpp  test_smf_export.cpp  test_smf_import.cpp  test_smpte_converter.cpp  test_snap.cpp  test_song_arrangement.cpp  test_spsc_queue.cpp  test_tempo_map.cpp  test_time_signature_map.cpp  test_timeline.cpp  test_timer.cpp  test_track_mute_solo.cpp  test_types.cpp  test_undo_redo.cpp
